--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cross-env": "^7.0.3",
     "currency.js": "^2.0.4",
     "date-fns": "^2.29.3",
+    "firebase": "^10.7.0",
     "formik": "^2.2.9",
     "i18next": "^22.4.14",
     "jsonwebtoken": "^9.0.2",
