--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "simplebar-react": "^3.2.3",
     "stylis": "^4.1.3",
     "stylis-plugin-rtl": "^2.1.1",
+    "swiper": "^11.0.5",
     "typewriter-effect": "^2.19.0",
     "yup": "^1.0.2"
   },
@@ -71,13 +72,16 @@
     "@types/react": "^18.0.33",
     "@types/react-scroll": "^1.8.6",
     "@types/stylis": "^4.0.2",
+    "autoprefixer": "^10.4.16",
     "babel-plugin-import": "^1.13.6",
     "eslint": "^8.37.0",
     "eslint-config-next": "13.2.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
+    "postcss": "^8.4.31",
     "prettier": "^2.8.7",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.0.3"
   }
 }
