--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "firebase": "^10.7.0",
     "formik": "^2.2.9",
     "i18next": "^22.4.14",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.0.2",
@@ -49,12 +50,16 @@
     "next-i18next": "^13.2.2",
     "notistack": "^3.0.1",
     "nprogress": "^0.2.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-i18next": "^12.2.0",
+    "react-icons": "^4.12.0",
+    "react-loading": "^2.0.3",
     "react-scroll": "^1.8.9",
     "react-toastify": "^9.1.3",
     "sharp": "^0.32.0",
